infrastructure-platform/kubernetes/base/application/sample-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-app
  namespace: application
  labels:
    app: sample-app

spec:
  type: ClusterIP

  selector:
    app: sample-app

  ports:

    # Normal application traffic
    - name: http
      port: 80
      targetPort: http

    # Prometheus metrics
    - name: metrics
      port: 9113
      targetPort: metrics
